avoid overflowing bootstrap modals

--- a/anvio/data/interactive/css/main.css
+++ b/anvio/data/interactive/css/main.css
@@ -692,3 +692,8 @@ div#tooltip_content tr:nth-child(odd) {background: rgba(220,220,220,0.1);}
 .sidebarPadding {
     padding-top: 60px !important;
 }
+
+.modal-body {
+    max-height: calc(100vh - 200px);
+    overflow-y: auto;
+}
